--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,12 @@
         "psr-4":{
             "Tests\\": "tests"
         }
+    },
+    "extra":{
+        "laravel":{
+            "providers":[
+                "apiOrganigrama\\ApiOrganigramaServiceProvider"
+            ]
+        }
     }
 }
